# cmake-qt5-single

./: CMakeLists.txt  build.cmd  main.cpp
